--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "body-parser": "^1.20.2"
   },
   "devDependencies": {
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.5.4"
-  }
+  "ts-node-dev": "^2.0.0",
+  "typescript": "^5.5.4",
+  "@types/express": "^4.17.21",
+  "@types/body-parser": "^1.19.5",
+  "@types/node": "^20.11.0"
 }
